--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 DB_HOST='loaclhost'
 DB_PORT='3300'
-DB_NAME='tech_blog_db'
+DB_NAME='model-view-controller-homework'
 DB_USER='root'
 DB_PASSWORD='John@1991'
 PORT='3000'
